# SOOP-Multiview-dev

./: README.md  package-lock.json  package.json  svelte.config.js  tsconfig.json
src/: app.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/lib/: index.ts
src/lib/chat/: Chat.svelte  chat.ts  index.ts
src/lib/components/: Carousel.svelte  Live.svelte  Popup.svelte  Sidebar.svelte  index.ts
src/lib/components/sidebar/: Chat.svelte  Sidebar.svelte
src/lib/components/sidebar/bubble/: ChatBubble.svelte  index.ts
src/lib/live/: Live.svelte  index.ts  live.ts  liveLogger.ts
src/lib/models/: chatData.ts  index.ts
src/lib/utils/: util.ts
src/routes/: +page.svelte  FlexCanvas.svelte  Video.svelte
src/routes/auth/: auth.ts
src/routes/chat/: ChatBubble.svelte  chatData.ts
src/routes/clip/: Video.svelte
src/routes/dashboard/: Dashboard.svelte
src/routes/login/: Login.svelte
src/routes/multiview/: Blank.svelte  Canvas.svelte  Carousel.svelte  Chat.svelte  FlexCanvas.svelte  Live.svelte  LiveInfoResponse.ts  Popup.svelte  Sidebar.svelte  Slot.svelte  carouselItemInfo.ts  chat.ts  chat_socket.ts  live.ts  liveErrors.ts  liveLogger.ts
src/routes/utils/: endpoints.ts  util.ts
