[package]
name = "soop-multiview"
version = "0.1.0"
description = "Multiview for SOOP"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "clipper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-http = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = {version = "0.12.12", features = ["blocking"] }
tokio = { version = "1.43.0", features = ["full"] }
m3u8-rs = "6.0.0"
base64 = "0.22.1"
url = "2.5.4"
bytes = "1.10.0"
percent-encoding = "2.3.1"
serde_urlencoded = "0.7.1"
urlencoding = "2.1.3"
tauri-plugin-single-instance = "2.2.2"

[plugins.http]
enable = true
all = true
scope = ["https://*", "http://*"]
